  the old behaviour of these operations is provided by the functions
  int.legacy_left_shift/2 and int.legacy_right_shift/2.  These functions
  will be deleted in a future release.

* We have changed the semantics of int.abs/1 so that it throws an exception
  if its argument is equal to int.min_int.  The old behaviour of this function
  is provided by the the new function int.unchecked_abs/1.

Changes to the Mercury language:

* We have added a new primitive type, uint, which is an unsigned integer type
  of the same size as Mercury's int type.  Literals of this type must have the
  suffix `u', for example:

       999u
       0b1111100111u
       0o1747u
       0x3e7u

  Basic operations on uint values are provided by the new standard library
  module `uint'.  (See below for details.)

* We have added a new kind of scope to the language: determinism checks
  for switch arms. These scopes are introduced by any of the new keywords

      require_switch_arms_det
      require_switch_arms_semidet
      require_switch_arms_multi
      require_switch_arms_nondet
      require_switch_arms_cc_multi
      require_switch_arms_cc_nondet
      require_switch_arms_erroneous
      require_switch_arms_failure

  `require_switch_arms_<determinism> [Var] Goal' tells the compiler to require
  `Goal' to be a switch on `Var' in which all the switch arms have determinisms
  at least as tight as <determinism>, and to generate error messages
  for any violations of this requirement.

* We have changed the meaning of require_complete_switch scopes slightly:
  the compiler now generates an error if the goal inside the scope
  is not a switch on the named variable.

* We have added a new kind of scope to the language for disabling warnings
  within the scope. A goal such as

      disable_warnings [singleton_vars] (
        Goal
      )

  is equivalent to Goal, with the exception that the compiler will not generate
  warnings about singleton variables inside Goal.
